# The-Nerve

./: .gitignore  BOM.csv  JOURNAL.md  README.md
.github/workflows/: rust_ci.yml
.idx/: dev.nix
automation/n8n/flows/: trigger_executor.json  video_pipeline.json
firmware/: Cargo.toml  Cod Nerve  firmware.py
firmware/.cargo/: config.toml
firmware/src/: main.rs
firmware/src/modules/: hype_dial.rs  oled_driver.rs
hardware/3d_models/: case_v1.step  the_nerve_case_bottom.stl  the_nerve_case_full_assembly.stl  the_nerve_case_main.stl
hardware/fabrication/: BOM_JLCPCB_PCBA.csv  BOM_The-Nerve_2026-02-13.csv  PickAndPlace_PCB_The-Nerve_2026-02-13.csv  the_nerve_pick_and_place.csv
hardware/pcb/: PCB_PCB_The-Nerve_2026-02-13.json  the_nerve.brd  the_nerve.dxf  the_nerve.json  the_nerve.kicad_pcb  the_nerve.net
hardware/schematics/: the_nerve.sch
