[package]
name = "the-nerve-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-graphics = "0.8.1"

# RP2040 & Embassy
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-executor = { version = "0.5.0", features = ["defmt", "integrated-timers", "arch-cortex-m"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.5.0" }
embassy-futures = { version = "0.1.0" }

# Logging & Debugging
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

# Drivers (Templates - Para você validar o chip real)
# sh1107 = "0.3.0" # Comum em OLEDs 128x128 da Waveshare
# rotary-encoder-hal = "0.5.0"
# usbd-hid = "0.6.1"
